--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h2>Открыть файл как текст с расширением: .txt; .html; .svg; для чтения, просмотра и редакции</h2>
 </header>
 <section>
-      <hr>
-<form action="">
+<hr>
+
 <br>
 <input id="text1" type="file" value = "🔎📑">
 
@@ -28,27 +28,27 @@
 
 </label>
 <br>
-<hr>
+<hr />
 <br>
 <textarea id="text"></textarea>
 <br>
 <hr />
      <input class="copy" id="copy" type="button" value="Copy to Clipboard" onclick="copyToClip();" />
  <hr />
-<hr>
+  
+  <p>Скопируйте текст и сохраните в блокноте на устройстве</p>
+<hr />
 <br>
 <button type="button" id="inputText">🖥️ </button>
 <br>
-<hr>
-<br>
-<hr>
+<hr/>
 <br>
 <p>Результат:</p>
 <div id = 'seeText'>
 
 </div>
 <br>
-<hr>
+<hr />
 
       
 </section>
