--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Editor T and M</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NETMAL</title>
  <link rel="stylesheet" href="style.css" title="" type="" />
   </head>
   <body>
