--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 <hr />
 <textarea id="text"></textarea>
 <hr />
-     <input class="copy" id="copy" type="button" value="Copy to Clipboard" onclick="copyToClip();" />
+     <input class="copy" id="copy" type="button" value="Копировать в буфер обмена" onclick="copyToClip();" />
 <hr />
-  
-  <p>Скопируйте текст и сохраните в блокноте на устройстве</p>
+  <p>Скопируйте текст и сохраните в блокноте на устройстве.</p>
 <hr />
 <button type="button" id="inputText">🖥️ </button>
 <hr/>
