--- a/netmal.html
+++ b/netmal.html
@@ -14,7 +14,7 @@
 <section>
 <hr>
 <input id="text1" type="file" value = "🔎📑">
-<!--input id="save" type="button" value="Сохранить на Диск 💾 " -->
+<input id="save" type="button" value="Сохранить на Диск 💾 ">
 <hr>
 <label for="">
 
