--- a/netmal.html
+++ b/netmal.html
@@ -14,7 +14,7 @@
 <section>
 <hr>
 <input id="text1" type="file" value = "🔎📑">
-<button id="save" type="button" value="">Сохранить на Диск 💾 </button>
+<!--button id="save" type="button" value="">Сохранить на Диск 💾 </button-->
 <hr>
 <label for="">
 
