--- a/netmal.html
+++ b/netmal.html
@@ -16,6 +16,8 @@
 <input id="text1" type="file" value = "🔎📑">
 <!--button id="save" type="button" value="">Сохранить на Диск 💾 </button-->
 <hr>
+<input id="save" type="button" value="👀">
+<hr>
 <label for="">
 
  Введите текст или откройте файл и нажмите "🖥️":
