--- a/netmal.html
+++ b/netmal.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-<h1>Note & Editor Text and Markup language</h1>
-<h2>Открыть файл как текст с расширением: .txt; .html; .svg; для чтения, просмотра и редакции</h2>
+<h1>Editor and Interpret SVG - file</h1>
+<h2>Открыть файл как текст с расширением: .svg; для чтения, просмотра и редакции</h2>
 </header>
 <section>
 <hr>
@@ -20,7 +20,7 @@
 <hr>
 <label for="">
 
- Введите текст или откройте файл и нажмите "🖥️":
+Создайте или откройте файл с разметкой SVG и нажмите "🖥️ - interpret":
 
 </label>
 <hr />
@@ -28,11 +28,11 @@
 <hr />
      <input class="copy" id="copy" type="button" value="Копировать в буфер обмена" onclick="copyToClip();" />
 <hr />
-  <p>Скопируйте текст и сохраните в блокноте на устройстве.</p>
+  <p>Скопируйте SVG - разметку и сохраните в блокноте на устройстве.</p>
 <hr />
-<button type="button" id="inputText">🖥️ </button>
+<button type="button" id="inputText">🖥️ - interpret </button>
 <hr/>
-<p>Результат:</p>
+<p>Результат interpret:</p>
 <div id = 'seeText'>
 
 </div>
